# projects-sandbox

./: .gitignore  README.md
projects/: Main.c
projects/MoneySimulator/: Transaction.py  __main__.py
projects/glfw_tutorial/: fragment_shader.glsl  glad.c  main.c  triangle.c  vertex_shader.glsl  vertex_shader_color.glsl
projects/matrix_add/: main  main.c  main.cpp
projects/opencl_sbox/: app  kernel_file.cl  main.cpp  main_win.cpp  reduction.c  reduction.cl
projects/sfml_tutorial/: MyEntity.cpp  MyEntity.hpp  app  draw_tutorial.cpp  entity.cpp  makefile  opengl_window_tutorial.cpp  window_tutorial.cpp
projects/sfml_tutorial/particle_system/: ParticleSystem.cpp  ParticleSystem.hpp  main  main.cpp  makefile
vs2022/ParticleEmitter/: ParticleEmitter.aps  ParticleEmitter.cpp  ParticleEmitter.hpp  ParticleEmitter.vcxproj  ParticleEmitter.vcxproj.filters  main.cpp  resource.h
vs2022/YoutubeOpenGL/: YoutubeOpenGL.vcxproj  glad.c  main.cpp
vs2022/opengl-window-tutorial/: main.cpp  opengl-window-tutorial.vcxproj
vs2022/sfml-entity/: MyEntity.cpp  MyEntity.hpp  main.cpp  sfml-entity.vcxproj  sfml-entity.vcxproj.filters
vs2022/test-cmake/: CMakeLists.txt  ElementBufferObject.cpp  ElementBufferObject.hpp  ShaderClass.cpp  ShaderClass.hpp  VertexArrayObject.cpp  VertexArrayObject.hpp  VertexBufferObject.cpp  VertexBufferObject.hpp  fragment_shader.glsl  main.cpp  vertex_shader.glsl
vs2022/test-opencl/: kernel_file.cl  main.cpp  test-opencl.vcxproj  test-opencl.vcxproj.filters
vs2022/test-sfml/: main.cpp  test-sfml.vcxproj  vs2022-sandbox.sln
vs2022/velocity-verlet/: main.cpp  velocity-verlet.vcxproj
